<resources>
    <string name="app_name">FESTIVA</string>
    <string name="add_button">Add button</string>
    <string name="more">More</string>
    <string name="menu">Меню</string>
    <string name="profile">Profile</string>
    <string name="eventsThisMonth">События в этом месяце</string>
    <string name="premium">Премиум подписка</string>
    <string name="question">Задать вопрос</string>
    <string name="user_manual">Руководство пользователя</string>
    <string name="back_main">Вернуться на главную</string>
    <string name="createEvent">Создать событие</string>
    <string name="settings">Настройки профиля</string>
    <string name="style">Выбрать тему</string>
    <string name="vidgets">Виджеты</string>
    <string name="exit">Выйти</string>
    <string name="layout">layout</string>
    <string name="user">Пользователь123</string>
    <string name="email">exampleEmail@gmail.com</string>
    <string name="event_title">Название события</string>
    <string name="content_description">Содержание..</string>
    <string name="data">Дата</string>
    <string name="create">Создать</string>
    <string name="start">Начало</string>
    <string name="end">Конец</string>
    <string name="remindMe">Напомнить мне</string>
    <string name="createCard">Прислать открытку</string>
    <string name="sendCard">Прислать поздравление</string>
    <string name="thisMonthEvents">События в этом месяце</string>
    <string name="past">Прошедшие</string>
    <string name="future">Будущие</string>
    <string name="weekEvents">Праздники недели</string>
    <string name="cardsAndGreetings">Открытки и поздравления</string>
    <string name="ApplicationPolicy">Политика приложения</string>
    <string name="FAQ">FAQ</string>
    <string name="MainFunctional">Основной функционал</string>
    <string name="LoginOrSignIn">Синхронизировать аккаунт</string>
    <string name="updateEvent">Изменить событие</string>
    <string name="cards">Открытки</string>
    <string name="greetings">Поздравления</string>
    <string name="howChangePasswordText">Перейдите в «Профиль» и нажмите кнопку изменения, расположенную рядом с вашей аватаром, выберите пункт «Изменить пароль». Введите текущий пароль, затем новый, и подтвердите изменения.</string>
    <string name="howRenewSubscriptionText">Откройте «Меню» → «Премиум подписка» и выберите нужный тип подписки. Следуйте инструкциям для продления, либо активации премиум-подписки.</string>
    <string name="howTurnOffReminders">Перейдите в «Меню» → «Уведомления» и отключите напоминания для конкретных событий или категорий событий, или полностью выключите уведомления для напоминаний.</string>
    <string name="howAddContactAutomaticGreetingsText">При создании события выберите функцию «Добавить получателя» и укажите контакт. Приложение предложит выбрать подходящий шаблон и стиль поздравления для контакта.</string>
    <string name="howChangeGreetingTextText">Да, после генерации поздравления его можно отредактировать. Нажмите «Редактировать текст» перед отправкой, чтобы внести изменения.</string>
    <string name="howRestoreAccessText">На экране входа выберите «Забыли пароль?» и следуйте инструкциям для сброса пароля. Вам придёт письмо со ссылкой для восстановления.</string>
    <string name="howCancelSubscriptionText">Чтобы отменить подписку, откройте «Меню» → «Премиум подписка» и выберите опцию отмены. Обратите внимание, что после отмены премиум-доступ будет доступен до окончания оплаченного периода.</string>
    <string name="howRegularEventsText">Приложение поддерживает настройку повторяющихся событий, таких как «ежедневно», «еженедельно», «ежемесячно» и «ежегодно». Вы можете установить повторение для любого события при его создании или редактировании.</string>
    <string name="howContactCustomerSupportText">В разделе «Меню» → «Задать вопрос» опишите ваш вопрос или проблему. Вы также можете отправить предложения по улучшению приложения.</string>
    <string name="aboutCompany"><b>Компания Festiva</b> - это инновационное приложение-календарь, созданное для того, чтобы вдохновлять и упрощать повседневную жизнь пользователей. Наша миссия - помогать людям эффективно планировать своё время, находить вдохновение и незабываемые впечатления.</string>
    <string name="greetingName">Название события</string>
    <string name="fromWho">От кого</string>
    <string name="toWho">Кому</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>