<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:background="@color/main_color">

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="750dp"
        android:id="@+id/layout_circle_profile"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="220dp"
        android:orientation="vertical"
        android:background="@android:color/transparent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/layout"
            android:src="@drawable/circle_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="374dp"
        android:layout_height="57dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="-150dp"
            android:layout_marginTop="20dp"
            android:maxHeight="36dp"
            android:maxWidth="36dp"
            android:contentDescription="@string/back_main"
            android:src="@drawable/ic_back"
            android:background="@android:color/transparent"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/avatar"
            />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/user"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/buttons_color"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/email"
            android:layout_gravity="center"
            android:textColor="@color/buttons_color"
            android:textSize="20sp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settingsButton"
            android:layout_width="400dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:text="@string/settings"
            android:enabled="false"
            app:backgroundTint="@color/page_color"
            android:gravity="start|center"
            android:textSize="16sp"
            android:textColor="@color/buttons_color"
            android:paddingHorizontal="40dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/styleButton"
            android:layout_width="400dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="70dp"
            android:text="@string/style"
            android:enabled="false"
            app:backgroundTint="@color/page_color"
            android:textSize="16sp"
            android:gravity="start|center"
            android:textColor="@color/buttons_color"
            android:paddingHorizontal="40dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/widgetButton"
            android:layout_width="400dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="70dp"
            android:textSize="16sp"
            android:text="@string/vidgets"
            android:enabled="false"
            app:backgroundTint="@color/page_color"
            android:gravity="start|center"
            android:textColor="@color/buttons_color"
            android:paddingHorizontal="40dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exitButton"
            android:layout_width="400dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="70dp"
            android:text="@string/exit"
            android:enabled="false"
            app:backgroundTint="@color/page_color"
            android:gravity="start|center"
            android:textSize="16sp"
            android:textColor="@color/buttons_color"
            android:paddingHorizontal="40dp"/>

    </LinearLayout>

</FrameLayout>