<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MoreFragment"
    android:background="@color/page_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="-300dp"
        android:layout_marginStart="-50dp"
        android:layout_marginEnd="-50dp"
        android:background="@android:color/transparent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/circle">
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:maxWidth="374dp"
            android:minWidth="320dp"
            android:layout_marginHorizontal="20dp"
            android:layout_height="57dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="12dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="32sp"
            android:textStyle="bold"
            android:text="@string/menu"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="50dp"
            android:textColor="@color/buttons_color"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/event_this_month"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="25dp"

                    android:background="@drawable/button_background"
                    android:elevation="10dp"
                    android:maxWidth="360dp"
                    android:text="@string/eventsThisMonth"
                    android:textColor="@color/buttons_color"
                    app:backgroundTint="@color/page_color" />

                <Button
                    android:id="@+id/weekEvents"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_background"
                    android:elevation="10dp"
                    android:maxWidth="360dp"
                    android:text="@string/weekEvents"
                    android:textColor="@color/buttons_color"
                    app:backgroundTint="@color/page_color" />

                <Button
                    android:id="@+id/premium"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_background"
                    android:elevation="10dp"
                    android:maxWidth="360dp"
                    android:text="@string/premium"
                    android:textColor="@color/buttons_color"
                    app:backgroundTint="@color/page_color" />

                <Button
                    android:id="@+id/askQuestion"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_background"
                    android:elevation="10dp"
                    android:maxWidth="360dp"
                    android:text="@string/question"
                    android:textColor="@color/buttons_color"
                    app:backgroundTint="@color/page_color" />

                <Button
                    android:id="@+id/userGuide"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_background"
                    android:elevation="10dp"
                    android:maxWidth="360dp"
                    android:text="@string/user_manual"
                    android:textColor="@color/buttons_color"
                    app:backgroundTint="@color/page_color" />

                <ImageButton
                    android:id="@+id/homeButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="30dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/back_main"
                    android:maxWidth="36dp"
                    android:maxHeight="36dp"
                    android:src="@drawable/ic_back" />
            </LinearLayout>
        </ScrollView>


    </LinearLayout>

</FrameLayout>