<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserGuideFragment"
    android:background="@color/page_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="-300dp"
        android:layout_marginStart="-50dp"
        android:layout_marginEnd="-50dp"
        android:background="@android:color/transparent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/circle">
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:minWidth="320dp"
            android:layout_marginHorizontal="20dp"
            android:maxWidth="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="28sp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/user_manual"
            android:layout_gravity="center"
            android:textColor="@color/buttons_color"/>

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="50dp"
            android:maxHeight="36dp"
            android:maxWidth="36dp"
            android:contentDescription="@string/back_main"
            android:src="@drawable/ic_back"
            android:background="@android:color/transparent"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:minWidth="320dp"
            android:maxWidth="380dp"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/ApplicationPolicy"
            android:layout_height="65dp"
            app:backgroundTint="@color/page_color"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textSize="18sp"
            app:cornerRadius="20dp"
            android:paddingVertical="10dp"
            android:textColor="@color/buttons_color"
            android:text="@string/ApplicationPolicy"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:minWidth="320dp"
            android:maxWidth="380dp"
            android:gravity="center"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/FAQ"
            app:cornerRadius="20dp"
            android:layout_height="65dp"
            android:textSize="18sp"
            app:backgroundTint="@color/page_color"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@color/buttons_color"
            android:text="@string/FAQ"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:minWidth="320dp"
            android:maxWidth="380dp"
            app:cornerRadius="20dp"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/MainFunctional"
            android:layout_height="65dp"
            android:gravity="center"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="18sp"
            app:backgroundTint="@color/page_color"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@color/buttons_color"
            android:text="@string/MainFunctional"/>

    </LinearLayout>

</FrameLayout>