<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".This_month_EventFragment"
    android:background="@color/main_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="-300dp"
        android:layout_marginStart="-50dp"
        android:layout_marginEnd="-50dp"
        android:background="@android:color/transparent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/circle_white">
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:minWidth="320dp"
            android:maxWidth="380dp"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="28sp"
            android:textStyle="bold"
            android:text="@string/thisMonthEvents"
            android:layout_gravity="center"
            android:textColor="@color/buttons_color"/>

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:maxHeight="36dp"
            android:maxWidth="36dp"
            android:contentDescription="@string/back_main"
            android:src="@drawable/ic_back"
            android:background="@android:color/transparent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:minWidth="320dp"
            android:maxWidth="380dp"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                app:backgroundTint="@color/coconut"
                android:layout_marginEnd="10dp"
                android:text="@string/past"
                android:textColor="@color/buttons_color"
                android:background="@drawable/buttons_background"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:textColor="@color/buttons_color"
                app:backgroundTint="@color/coconut"
                android:layout_marginStart="10dp"
                android:text="@string/future"
                android:background="@drawable/buttons_background"/>

        </LinearLayout>



    </LinearLayout>

    </FrameLayout>