<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CardsAndGreetingsFragment"
    android:background="@color/page_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:layout_marginTop="-200dp"
        android:layout_marginStart="-56dp"
        android:layout_marginEnd="-56dp"
        android:background="@android:color/transparent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/circle">
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:minWidth="320dp"
            android:maxWidth="380dp"
            android:layout_marginHorizontal="10dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="28sp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/cardsAndGreetings"
            android:layout_gravity="center"
            android:textColor="@color/buttons_color"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:minWidth="320dp"
            android:maxWidth="380dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cards"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@drawable/buttons_background"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/cards"
                android:textColor="@color/buttons_color"
                android:gravity="center"
                android:textSize="11sp"
                app:backgroundTint="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/greetings"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/buttons_background"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/greetings"
                android:gravity="center"
                android:textColor="@color/page_color"
                android:textSize="11sp"

                app:backgroundTint="@color/text_date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="30dp"
            android:maxHeight="36dp"
            android:maxWidth="36dp"
            android:contentDescription="@string/back_main"
            android:src="@drawable/ic_back"
            android:background="@android:color/transparent"/>


    </LinearLayout>

</FrameLayout>